# Vision-Mouse

./: .gitignore  README.md  VISION_MOUSE_DOCS_v2.md  build.bat  pyproject.toml
src/vision_mouse/: __init__.py  camera.py  hotkey.py  main.py  mouse_controller.py  settings_store.py  tracker.py
src/vision_mouse/ui/: __init__.py  pip_overlay.py  settings_window.py  tray.py
